public/css/styles.css
/* GLOBALS */
@font-face {
    font-family: 'Tajawal';
    src: url('../fonts/Tajawal-Regular.ttf');
}

@font-face {
    font-family: 'Tajawal-Bold';
    src: url('../fonts/Tajawal-Bold.ttf');
}

@font-face {
    font-family: 'Cairo-Bold';
    src: url('../fonts/Cairo-Bold.ttf');
}
@font-face {
    font-family: 'Cairo';
    src: url('../fonts/Cairo-Regular.ttf');
}

* {
    box-sizing: border-box;
    font-family: 'Tajawal';
    z-index: 1;
}
html,
body {
    width: 100%;
    height: auto;
    padding: 0px;
    margin: 0px;
}

main {
    width: 100%;
    height: 100%;
}

.container {
    padding: 0 15%;
    width: 100%;
    height: 100%;
}

.section-header {
    text-align: center;
    margin-bottom: 40px;
}
.section-header > .main-header {
    font-size: 35px;
    font-family: 'Tajawal-Bold';
    color: #2c2e30;
    display: block;
}

.section-header > .sub-header {
    font-size: 16px;
    color: #54565a;
    line-height: 1.75;
}

/*------------------------------HEADER CSS-----------------------------------*/
header {
    background: #283583;
    height: 50px;
}

.header-options {
    display: flex;
    flex-direction: row;
}
.search-btn,
.lang-btn,
.social-btn {
    background-color: rgba(4, 10, 42, 0.2);
    border: none;
    outline: none;
    cursor: pointer;
    color: #fff;
    text-align: center;
    padding: 0px 20px;
    font-size: 14px;
}

.search-btn > img {
    vertical-align: middle;
    padding-left: 5px;
}

.lang-btn,
.social-btn {
    background: none;
    width: 28px;
    height: 28px;
}

.social-btn {
    height: 32px;
    width: 32px;
    border-radius: 50%;
    align-self: center;
    margin-right: auto;
}

.language-conatiner {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0px 10px;
}
.language-conatiner > .fr {
    /*background-image: url("france.png");*/
    margin-left: 10px;
}
.language-conatiner > .eg {
    /*background-image: url("egypt.png");*/
}
.language-conatiner > .fr,
.language-conatiner > .eg {
    background-repeat: no-repeat;
    background-position: center center;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.4s ease-in-out;
}
.language-conatiner > .fr:hover,
.language-conatiner > .eg:hover {
    transform: rotate(360deg);
}

.language-conatiner > .fr:hover {
    /*background-image: url("eiffel-tower.png");*/
}

.language-conatiner > .eg:hover {
    /*background-image: url("pyramid.png");*/
}

.language-conatiner > .fr > img,
.language-conatiner > .eg > img {
    width: 28px;
}

/*-----------------NAVIGATION----------------*/

.navigation {
    background: #fff;
    width: 100%;
    height: 70px;
    box-shadow: 0 20px 40px 0 rgba(125, 138, 159, 0.13);
    border: solid 1.2px rgba(201, 209, 219, 0.11);
}

.footer-nav {
    /* background:#283583; */
    color: #fff !important;
    box-shadow: 0 20px 40px 0 rgba(125, 138, 159, 0.13);
    border: solid 2px rgba(201, 209, 219, 0.11);
}

.footer-nav > .navigation-list > .navigation-list-item > a {
    color: #fff !important;
}

.navigation-list {
    list-style: none;
    width: 100%;
    margin: 0px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.navigation-list-item {
    height: 0px;
    overflow: hidden;
    display: inline-block;
    padding: 0px 10px;
}
.menu-toggle {
    display: none;
    margin-right: auto;
}

@media screen and (max-width: 769px) {
    nav {
        height: auto !important;
    }
    .navigation-list-item {
        margin-bottom: 5px;
    }
    .navigation-list {
        flex-direction: column;
        z-index: 2000;
    }
    .menu-toggle {
        display: block;
        margin-right: auto;
    }
}
.navigation-list-item > a {
    display: block;
    height: 100%;
    text-decoration: none;
    color: #8591b0;
    font-size: 17px;
}
.logo {
    padding: 0px;
    margin-left: 40px;
}
.greeting {
    /*background: url("../images/doctor-section-background.png") no-repeat;*/
    height: 80vh;
    background-size: cover;
    background-position: center center;
    width: 100%;
    display: grid;
    grid-template-rows: auto 100px;
    grid-template-columns: repeat(2, 1fr);
    direction: rtl;
}
.doctor-image {
    grid-column: 2;
    grid-row: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}
.doctor-image > img {
    width: 100%;
}

.geeting-text {
    display: flex;
    padding-right: 20px;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
}

.welcome,
.official-site,
.doctor-name {
    display: block;
    letter-spacing: normal;
}

.welcome {
    color: #7e8085;
    font-size: 21px;
    line-height: 1.62;
}

.official-site,
.doctor-name {
    font-size: 51px;
}

.official-site {
    color: #040a2c;
}
.doctor-name {
    color: #283583;
}
.navigate-down {
    grid-column: 1/3;
    grid-row: 2;
    display: flex;
    justify-content: center;
    align-items: center;
}

.navigate-down > a {
    font-size: 18px;
    background: none;
    cursor: pointer;
    display: flex;
    border: none;
    cursor: pointer;
    flex-direction: column;
}

.navigate-down > a > span {
    display: block;
    color: black;
    margin-bottom: 12px;
}
.navigate-down > a > img {
    margin: 0 auto;
}

/*---------------------------- ABOUT DOCTOR SECTION -----------------------------*/

.about-doctor {
    background-image: linear-gradient(310deg, #ffffff, #fcfdfd);
    padding-top: 100px;
    padding-bottom: 100px;
    /* display: grid; */
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, auto);
    height: auto;
    gap: 60px;
}

.about-doctor-title,
.about-important-works {
    color: #2c2e30;
    font-family: 'Tajawal-Bold';
    font-size: 35px;
}

.about-text > p,
.important-work-text > p {
    line-height: 1.75;
    letter-spacing: normal;
    text-align: right;
    font-size: 16px;
}
/* ... */

